fixed invisible numbers in id number field

--- a/public/css/mainstyle.css
+++ b/public/css/mainstyle.css
@@ -176,7 +176,7 @@ table{
 
 #id_number_wrapper{
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   width: 100%;
   left: 100px;
 }
